--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
             <nav>
                 <div class="logo-container">
                     <div class="main-logo">
-                        <span>D</span>
                         <div class="logo-circle">
-                            <img src="images/logo/logo blue.png" alt="Dev Dan Designs Logo" class="logo">
+                            <img src="images/logo/logo colored.png" alt="Dev Dan Designs Logo" class="logo">
                         </div>
-                        <span>D</span>
                     </div>
                     <div class="logo-text">
                         <h1>Dev Dan Designs</h1>
