--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <div class="social-links">
                         <h3>Connect With Us</h3>
                         <div class="social-icons">
-                            <a href="https://facebook.com/yourprofile" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/danny.chei.1" target="_blank"><i class="fab fa-facebook-f"></i></a>
                             <a href="https://tiktok.com/yourprofile" target="_blank"><i class="fab fa-tiktok"></i></a>
                             <a href="https://instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a href="https://github.com/danchege" target="_blank"><i class="fab fa-github"></i></a>
