updated contact form

--- a/index.html
+++ b/index.html
@@ -211,8 +211,10 @@
                 <div class="contact-info">
                     <h3>Contact Information</h3>
                     <div class="info-item">
-                        <i class="fas fa-envelope"></i>
-                        <p>danychege28@gmail.com</p>
+                        <a href="mailto:danychege28@gmail.com">
+                            <i class="fas fa-envelope"></i>
+                            <p>danychege28@gmail.com</p>
+                        </a>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-phone"></i>
@@ -233,7 +235,7 @@
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form id="contactForm" action="https://formspree.io/f/danychege28@gmail.com" method="POST">
+                    <form id="contactForm">
                         <div class="form-group">
                             <input type="text" name="name" placeholder="Your Name" required>
                         </div>
