--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
+                        <img src="images/projects/agriconnect.jpg" alt="Agriconnect Project">
+                        <div class="project-overlay">
+                            <h3>Agriconnect</h3>
+                            <p>Web app connecting Kenyan farmers to buyers</p>
+                            <a href="https://agriconnect-e8ef7.web.app/" class="project-link">View Details</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
                         <img src="images/projects/e commerce.jpg" alt="Web Design Project">
                         <div class="project-overlay">
                             <h3>E-commerce Website</h3>
